--- a/pom.xml
+++ b/pom.xml
@@ -5,16 +5,16 @@
 
   <name>JBoss JDK6 httpserver to JAXWS 2.2 HTTP SPI bridge</name>
   <groupId>org.jboss.ws.projects</groupId>
-  <artifactId>jaxws-httpserver-httpspi</artifactId>
+  <artifactId>jaxws-undertow-httpspi</artifactId>
   <packaging>jar</packaging>
 
   <version>1.0.0-SNAPSHOT</version>
 
   <!-- Source Control Management -->
   <scm>
-    <connection>scm:svn:http://anonsvn.jboss.org/repos/jbossws/projects/jaxws-httpserver-httpspi/trunk</connection>
-    <developerConnection>scm:svn:https://svn.jboss.org/repos/jbossws/projects/jaxws-httpserver-httpspi/trunk</developerConnection>
-    <url>http://fisheye.jboss.com/viewrep/JBossWS/projects/jaxws-httpserver-httpspi/trunk</url>
+    <connection>scm:svn:http://anonsvn.jboss.org/repos/jbossws/projects/jaxws-undertow-httpspi/trunk</connection>
+    <developerConnection>scm:svn:https://svn.jboss.org/repos/jbossws/projects/jaxws-undertow-httpspi/trunk</developerConnection>
+    <url>http://fisheye.jboss.com/viewrep/JBossWS/projects/jaxws-undertow-httpspi/trunk</url>
   </scm>
 
   <!-- Parent -->
