--- a/projects/jaxws-undertow-httpspi/tags/jaxws-undertow-httpspi-1.0.0.Beta1/pom.xml
+++ b/projects/jaxws-undertow-httpspi/tags/jaxws-undertow-httpspi-1.0.0.Beta1/pom.xml
@@ -8,7 +8,7 @@
   <artifactId>jaxws-undertow-httpspi</artifactId>
   <packaging>jar</packaging>
 
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0.Beta1</version>
 
   <!-- Source Control Management -->
   <scm>
