--- a/projects/jaxws-undertow-httpspi/trunk/pom.xml
+++ b/projects/jaxws-undertow-httpspi/trunk/pom.xml
@@ -28,9 +28,9 @@
   <properties>
     <jaxws.version>2.0.2.Final</jaxws.version>
     <junit.version>4.8.1</junit.version>
-    <cxf.version>2.7.8</cxf.version>
+    <cxf.version>2.7.13</cxf.version>
     <servlet-api.version>1.0.2.Final</servlet-api.version>
-    <io.undertow.version>1.0.0.Beta33</io.undertow.version>
+    <io.undertow.version>1.0.10.Final</io.undertow.version>
   </properties>
 
   <!-- Dependencies -->
