--- a/projects/jaxws-undertow-httpspi/trunk/pom.xml
+++ b/projects/jaxws-undertow-httpspi/trunk/pom.xml
@@ -8,13 +8,13 @@
   <artifactId>jaxws-undertow-httpspi</artifactId>
   <packaging>jar</packaging>
 
-  <version>1.0.1.Final</version>
+  <version>1.0.2-SNAPSHOT</version>
 
   <!-- Source Control Management -->
   <scm>
-    <connection>scm:svn:http://anonsvn.jboss.org/repos/jbossws/projects/jaxws-undertow-httpspi/tags/jaxws-undertow-httpspi-1.0.1.Final</connection>
-    <developerConnection>scm:svn:https://svn.jboss.org/repos/jbossws/projects/jaxws-undertow-httpspi/tags/jaxws-undertow-httpspi-1.0.1.Final</developerConnection>
-    <url>http://fisheye.jboss.com/viewrep/JBossWS/projects/jaxws-undertow-httpspi/tags/jaxws-undertow-httpspi-1.0.1.Final</url>
+    <connection>scm:svn:http://anonsvn.jboss.org/repos/jbossws/projects/jaxws-undertow-httpspi/trunk</connection>
+    <developerConnection>scm:svn:https://svn.jboss.org/repos/jbossws/projects/jaxws-undertow-httpspi/trunk</developerConnection>
+    <url>http://fisheye.jboss.com/viewrep/JBossWS/projects/jaxws-undertow-httpspi/trunk</url>
   </scm>
 
   <!-- Parent -->
