--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,14 @@
     <io.undertow.version>1.0.10.Final</io.undertow.version>
   </properties>
 
+  <!-- licenses -->
+  <licenses>
+    <license>
+      <name>GNU Lesser General Public License v2.1 only</name>
+      <url>http://repository.jboss.org/licenses/lgpl-2.1.txt</url>
+    </license>
+  </licenses>
+
   <!-- Dependencies -->
   <dependencies>
     <dependency>
