--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,9 @@
 
   <!-- Source Control Management -->
   <scm>
-    <connection>scm:svn:http://anonsvn.jboss.org/repos/jbossws/projects/jaxws-undertow-httpspi/trunk</connection>
-    <developerConnection>scm:svn:https://svn.jboss.org/repos/jbossws/projects/jaxws-undertow-httpspi/trunk</developerConnection>
-    <url>http://fisheye.jboss.com/viewrep/JBossWS/projects/jaxws-undertow-httpspi/trunk</url>
+    <connection>scm:git:git://github.com/jbossws/jaxws-undertow-httpspi.git</connection>
+    <developerConnection>scm:git:git@github.com:jbossws/jaxws-undertow-httpspi.git</developerConnection>
+    <url>https://github.com/jbossws/jaxws-undertow-httpspi/tree/master/</url>
   </scm>
 
   <!-- Parent -->
