--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,9 @@
   <groupId>org.jboss.ws.projects</groupId>
   <artifactId>jaxws-undertow-httpspi</artifactId>
   <packaging>jar</packaging>
+   <description>Undertow to JAXWS 2.2 HTTP SPI bridge jakarta</description>
 
-  <version>1.0.2-SNAPSHOT</version>
+  <version>2.0.0-SNAPSHOT</version>
 
   <!-- Source Control Management -->
   <scm>
