--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,4 +1,7 @@
-name: JBossWS-CXF CI Build
+# This workflow will build a Java project with Maven
+# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
+
+name: Maven build
 
 on:
   push:
@@ -12,22 +15,15 @@ jobs:
   build:
 
     runs-on: ${{ matrix.os }}
-    timeout-minutes: 90
+    timeout-minutes: 60
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest ]
-        java: ['8', '11']
-        wildfly-version: ['wildfly2400', 'wildfly2500']
+        java: ['1.8', '11']
 
     steps:
-      - name: Checkout jbossws-cxf
-        uses: actions/checkout@v2
-      - name: Checkout wildfly
-        uses: actions/checkout@v2
-        with:
-          repository: wildfly/wildfly
-          path: './wildfly'
+      - uses: actions/checkout@v2
       - uses: actions/cache@v1
         with:
           path: ~/.m2/repository
@@ -35,24 +31,13 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
       - name: Set up JDK ${{ matrix.java }}
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v1
         with:
           java-version: ${{ matrix.java }}
-          distribution: 'adopt'
-      - name: Conditionally build WFLY
-        if: ${{ matrix.wildfly-version == 'wildfly2500'}}
-        working-directory: ./wildfly
-        run: mvn -DskipTests=true '-Denforcer.skip=true' -Prelease clean install
-      - name: Build with Maven Java ${{ matrix.java }} on WildFly ${{ matrix.wildfly-version }}
-        run: |
-          mvn -s ./.m2-settings.xml -B -V -fae -P${{ matrix.wildfly-version }} verify
+      - name: Build with Maven Java ${{ matrix.java }}
+        run: mvn -s .m2-settings.xml -B -fae clean install
       - uses: actions/upload-artifact@v2
         if: failure()
         with:
-          name: surefire-reports-${{ matrix.os }}-${{ matrix.java }}-${{ matrix.wildfly-version }}
+          name: surefire-reports-${{ matrix.os }}-${{ matrix.java }}
           path: '**/surefire-reports/*.txt'
-      - uses: actions/upload-artifact@v2
-        if: failure()
-        with:
-          name: server-logs-${{ matrix.os }}-${{ matrix.java }}-${{ matrix.wildfly-version }}
-          path: '**/server.log'
