--- a/pom.xml
+++ b/pom.xml
@@ -9,14 +9,14 @@
   <packaging>jar</packaging>
    <description>Undertow to JAXWS 2.2 HTTP SPI bridge jakarta</description>
 
-  <version>2.0.0.Final</version>
+  <version>2.0.1.Final-SNAPSHOT</version>
 
   <!-- Source Control Management -->
   <scm>
     <connection>scm:git:https://github.com/jbossws/jaxws-undertow-httpspi.git</connection>
     <developerConnection>scm:git:https://github.com/jbossws/jaxws-undertow-httpspi.git</developerConnection>
     <url>https://github.com/jbossws/jaxws-undertow-httpspi</url>
-    <tag>jaxws-undertow-httpspi-2.0.0.Final</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <!-- Parent -->
